fixing footer bar
no extra spacing below icons

--- a/assets/stylesheets/css-media.css
+++ b/assets/stylesheets/css-media.css
@@ -5,7 +5,6 @@ body {
   font-size: 16px;
   color: white;
   padding-top: 100px;
-  line-height: 0.7;
 }
 
 h1 {
