--- a/assets/stylesheets/css-store.css
+++ b/assets/stylesheets/css-store.css
@@ -5,7 +5,6 @@ body {
   font-size: 16px;
   color: white;
   padding-top: 100px;
-  line-height: 0.7;
 }
 
 h1 {
@@ -140,29 +139,6 @@ h2 {
   font-size: 16px;
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    content: center;
-    background-color: black;
-    color: white;
-}
-
-a {
-  color: white;
-}
-
-.social-media-container li {
-    float: right;
-    display: inline-block;
-    font-size: 20px;
-    padding: 5px;
-    padding-right: 10px;
-}
-
 .container {
     overflow: hidden;
 }
@@ -206,4 +182,26 @@ button img:hover {
   height: auto;
   display: inline-grid;
   padding: 10px;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: black;
+    color: white;
+}
+
+a {
+  color: white;
+}
+
+.social-media-container li {
+    float: right;
+    display: inline-block;
+    font-size: 20px;
+    padding: 5px;
+    padding-right: 10px;
 }
